<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFriends">

    <ImageView
        android:id="@+id/backgroundaddfriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/friendsbg" />

    <ImageButton
        android:id="@+id/gotomain"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:layout_alignBottom="@+id/addfriendstitle"
        android:layout_alignStart="@+id/emailsearch"
        android:background="#0000"
        android:onClick="gobacktomain"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056"
        app:srcCompat="@drawable/backtomainmenu" />


    <ListView
        android:id="@+id/listviewaddfriends"
        android:layout_width="match_parent"
        android:layout_height="413dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/addfriends"
        android:layout_width="106dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="75dp"
        android:background="@drawable/addfriendsbutton"
        android:onClick="addfriends" />

    <TextView
        android:id="@+id/addfriendstitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="16dp"
        android:text="Add More Friends"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailsearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/searchusers"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:layout_alignBottom="@+id/emailsearch"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="96dp"
        android:background="@drawable/searchbutton"
        android:onClick="searchfriends" />

    <Button
        android:id="@+id/reset"
        android:layout_width="72dp"
        android:layout_height="37dp"
        android:layout_alignBottom="@+id/emailsearch"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="13dp"
        android:background="@drawable/reset"
        android:onClick="reset" />

    <Button
        android:id="@+id/viewfriends"
        android:layout_width="106dp"
        android:layout_height="53dp"
        android:layout_alignTop="@+id/addfriends"
        android:layout_toStartOf="@+id/reset"
        android:background="@drawable/viewfriends"
        android:onClick="viewfriends" />

</RelativeLayout>